--- a/bootstrap.html
+++ b/bootstrap.html
@@ -92,8 +92,135 @@
         <strong>Danger!</strong> Yay! You didn't.
       </div>
     </article> -->
-    <img src="./images/intro.svg" alt="login-image" />
+    <!-- <img src="./images/intro.svg" alt="login-image" /> -->
     <!-- JavaScript Bundle with Popper -->
+
+    <nav class="navbar navbar-expand-sm bg-light">
+      <div class="container-fluid">
+        <a href="#" class="navbar-brand">
+          <img
+            src="https://img.pixers.pics/pho_wat(s3:700/FO/61/30/15/92/700_FO61301592_f6729bda2d2a94b6a28207f839aec6ab.jpg,700,700,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,480,650,jpg)/posters-logo-association-reseau.jpg.jpg"
+            alt="logo"
+            height="50px"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapsible"
+        ></button>
+        <div id="collapsible" class="collapse navbar-collapse">
+          <!-- Links -->
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link 1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link 3</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- <ul class="nav nav-tabs justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="#"> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"> About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"> Contact</a>
+      </li>
+    </ul> -->
+    <ul class="nav nav-tabs justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="#home" data-bs-toggle="tab"> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about" data-bs-toggle="tab"> About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact" data-bs-toggle="tab"> Contact</a>
+      </li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane container active" id="home">I am home</div>
+      <div class="tab-pane container" id="about">i am about</div>
+      <div class="tab-pane container" id="contact">contact us here</div>
+    </div>
+    <button onmouseenter="sayHello(2, 1)" type="btn-lg">Say Hello</button>
+    <!-- <div
+      class="carousel"
+      carousel="carousel slide"
+      id="example"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indocators">
+        <button
+          class="active"
+          data-bs-slide-to="0"
+          data-bs-target="#example"
+        ></button>
+        <button
+          class="active"
+          data-bs-slide-to="1"
+          data-bs-target="#example"
+        ></button>
+        <button
+          class="active"
+          data-bs-slide-to="2"
+          data-bs-target="#example"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="https://png.pngtree.com/thumb_back/fh260/background/20191215/pngtree-modern-double-colors-neon-lights-on-brick-background-image_324803.jpg"
+            class="d-block w-100"
+            alt="background"
+            alt="music-bg"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://thumbs.dreamstime.com/b/spring-background-pink-flowers-heart-petals-greeting-card-woman-day-flat-lay-top-view-style-109972453.jpg"
+            class="d-block w-100"
+            alt="background"
+            alt="music-bg"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://burst.shopifycdn.com/photos/elaborate-building-interior-with-light-teal-walls.jpg?width=1200&format=pjpg&exif=1&iptc=1"
+            class="d-block w-100"
+            alt="background"
+            alt="music-bg"
+          />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#example"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#example"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div> -->
+    <script src="./functions.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
